Issue #SB-20718 fix backButton aligned

--- a/src/app/profile-settings/profile-settings.page.scss
+++ b/src/app/profile-settings/profile-settings.page.scss
@@ -159,6 +159,7 @@
     flex-grow: 0;
     flex-shrink: 0;
     .top-back-button{
+      position: absolute;
       width: 30px;
       @include ltr() {
         left: 16px;
